# penport

./: .gitignore  LICENSE  README.md  build-requirements.txt  config.py  log_window.py  main.py  pyproject.toml  requirements.txt  settings_window.py  tracker.py  tray.py  watcher.py
.claude/: settings.local.json
pipeline/: correct.py  runner.py  transcribe.py
providers/: __init__.py  anthropic.py  base.py  gemini.py  ollama.py  openai.py
